# better-code

./: CMakeLists.txt  ReadMe.md  Registry.hpp  after_idle.hpp  main.cpp
include/cppcon/: concepts.h
lib/: FibBase.h  Fibonacci.h
src/: CMakeLists.txt  CMakeSettings.json  PanelBar.hpp  document.h  drawable.h  history.h  main.cpp  main.cxx  reverse_fwd.hpp  slide.hpp  slist_reverse.hpp
test/: test.cpp  test.txt
